k8s/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - eschool-api.504da16e748f4adb9ef4.westeurope.aksapp.io
    secretName: api-gw-tls-secret
  rules:
  - host: eschool-api.504da16e748f4adb9ef4.westeurope.aksapp.io
    http:
      paths:
      - path: /class-register(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: classregister
            port:
              number: 80
      - path: /home-assignments(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: homeassignments
            port:
              number: 80
      - path: /identity-provider(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: identityprovider
            port:
              number: 80
      - path: /testing(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: testing
            port:
              number: 80
