k8s/ingress/idp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - eschool-idp.504da16e748f4adb9ef4.westeurope.aksapp.io
    secretName: idp-tls-secret
  rules:
  - host: eschool-idp.504da16e748f4adb9ef4.westeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identityprovider
            port:
              number: 80
